@@ -1,3 +1,8 @@
+2015-02-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/jpeg.c (ReadJPEGImage): Verify that we support the number
+	of output components before proceeding to decode the image.
+
 2015-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/miff.c (ReadMIFFImage): MIFF needs to stop spinning if
